--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,6 +7,10 @@ send_metrics = false
 
 build = { command = "npm install && node build.js" }
 
+kv_namespaces = [
+  { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" }
+]
+
 [vars]
 VERSION = "@@VERSION@@-dev"
 ENVIRONMENT = "dev"
