--- a/wrangler.toml
+++ b/wrangler.toml
@@ -21,6 +21,10 @@ ENVIRONMENT = "dev"
 [env.ci]
 name = "adobe-commerce-api-ci"
 
+kv_namespaces = [
+  { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" }
+]
+
 [env.ci.vars]
 VERSION = "@@VERSION@@-ci"
 ENVIRONMENT = "ci"
@@ -30,6 +34,10 @@ ENVIRONMENT = "ci"
 
 [env.production]
 name = "adobe-commerce-api"
+
+kv_namespaces = [
+  { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" }
+]
 
 [env.production.vars]
 VERSION = "@@VERSION@@"
