--- a/wrangler.toml
+++ b/wrangler.toml
@@ -30,6 +30,11 @@ kv_namespaces = [
   { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" }
 ]
 
+[[env.ci.r2_buckets]]
+binding = "CATALOG_BUCKET"
+preview_bucket_name = "adobe-commerce-catalog-dev"
+bucket_name = "adobe-commerce-catalog-ci"
+
 [env.ci.vars]
 VERSION = "@@VERSION@@-ci"
 ENVIRONMENT = "ci"
