--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,6 +11,11 @@ kv_namespaces = [
   { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" }
 ]
 
+[[r2_buckets]]
+binding = "CATALOG_BUCKET"
+preview_bucket_name = "adobe-commerce-catalog-dev"
+bucket_name = "adobe-commerce-catalog-dev"
+
 [vars]
 VERSION = "@@VERSION@@-dev"
 ENVIRONMENT = "dev"
@@ -38,6 +43,11 @@ name = "adobe-commerce-api"
 kv_namespaces = [
   { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" }
 ]
+
+[[env.production.r2_buckets]]
+binding = "CATALOG_BUCKET"
+preview_bucket_name = "adobe-commerce-catalog-dev"
+bucket_name = "adobe-commerce-catalog"
 
 [env.production.vars]
 VERSION = "@@VERSION@@"
