--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-import": "2.29.1",
     "esmock": "^2.6.9",
     "husky": "9.1.4",
+    "jsdom": "25.0.1",
     "lint-staged": "15.2.9",
     "mocha": "10.7.3",
     "mocha-multi-reporters": "1.5.1",
