--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-header": "3.1.1",
     "eslint-plugin-import": "2.29.1",
     "esmock": "^2.6.9",
+    "html-differ": "1.4.0",
     "husky": "9.1.4",
     "jsdom": "25.0.1",
     "lint-staged": "15.2.9",
