--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prepare": "husky",
     "build": "node build.js",
-    "lint": "eslint . --ext js,cjs,mjs --fix",
+    "lint": "eslint . --ext js,cjs,mjs",
     "test": "c8 --all --include 'src/**/*.js' mocha -i -g 'Post-Deploy' --spec 'test/**/*.test.js'",
     "dev": "if test -e .dev.vars; then wrangler dev --; else echo \"Need a .dev.vars files before starting local dev server\"; fi",
     "dev:remote": "wrangler dev --remote",
