--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,7 +8,8 @@ send_metrics = false
 build = { command = "npm install && node build.js" }
 
 kv_namespaces = [
-  { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" }
+  { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" },
+  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" }
 ]
 
 [[r2_buckets]]
@@ -27,7 +28,8 @@ ENVIRONMENT = "dev"
 name = "adobe-commerce-api-ci"
 
 kv_namespaces = [
-  { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" }
+  { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" },
+  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" }
 ]
 
 [[env.ci.r2_buckets]]
@@ -46,7 +48,8 @@ ENVIRONMENT = "ci"
 name = "adobe-commerce-api"
 
 kv_namespaces = [
-  { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" }
+  { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" },
+  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" }
 ]
 
 [[env.production.r2_buckets]]
