--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/exec": "6.0.3",
     "@semantic-release/git": "10.0.1",
+    "@types/mocha": "10.0.10",
     "c8": "10.1.2",
     "dotenv": "16.4.5",
     "esbuild": "0.23.0",
