--- a/wrangler.toml
+++ b/wrangler.toml
@@ -42,6 +42,26 @@ VERSION = "@@VERSION@@-ci"
 ENVIRONMENT = "ci"
 
 # ----------------------------------------------------------------------
+# next environment
+
+[env.next]
+name = "adobe-commerce-api-next"
+
+kv_namespaces = [
+  { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" },
+  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" }
+]
+
+[[env.next.r2_buckets]]
+binding = "CATALOG_BUCKET"
+preview_bucket_name = "adobe-commerce-catalog"
+bucket_name = "adobe-commerce-catalog"
+
+[env.next.vars]
+VERSION = "@@VERSION@@-next"
+ENVIRONMENT = "next"
+
+# ----------------------------------------------------------------------
 # production environment
 
 [env.production]
