--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,7 +9,8 @@ build = { command = "npm install && node build.js" }
 
 kv_namespaces = [
   { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" },
-  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" }
+  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" },
+  { binding = "CATALOG_BUCKET", id = "f995b6b2f19546169d204c72414ac72f", preview_id = "f995b6b2f19546169d204c72414ac72f" }
 ]
 
 [[r2_buckets]]
@@ -29,7 +30,8 @@ name = "adobe-commerce-api-ci"
 
 kv_namespaces = [
   { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" },
-  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" }
+  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" },
+  { binding = "CATALOG_BUCKET", id = "f995b6b2f19546169d204c72414ac72f", preview_id = "f995b6b2f19546169d204c72414ac72f" }
 ]
 
 [[env.ci.r2_buckets]]
@@ -49,7 +51,8 @@ name = "adobe-commerce-api-next"
 
 kv_namespaces = [
   { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" },
-  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" }
+  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" },
+  { binding = "CATALOG_BUCKET", id = "f995b6b2f19546169d204c72414ac72f", preview_id = "f995b6b2f19546169d204c72414ac72f" }
 ]
 
 [[env.next.r2_buckets]]
@@ -69,7 +72,8 @@ name = "adobe-commerce-api"
 
 kv_namespaces = [
   { binding = "CONFIGS", id = "bb91e12a65a8462282396f32e63406f1", preview_id = "bb91e12a65a8462282396f32e63406f1" },
-  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" }
+  { binding = "KEYS", id = "0ca5d0ba0150453bb8aafcdf4304dc7a", preview_id = "0ca5d0ba0150453bb8aafcdf4304dc7a" },
+  { binding = "CATALOG_BUCKET", id = "f995b6b2f19546169d204c72414ac72f", preview_id = "f995b6b2f19546169d204c72414ac72f" }
 ]
 
 [[env.production.r2_buckets]]
