--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
   },
   "lint-staged": {
     "*.(js|cjs|mjs)": "eslint"
+  },
+  "dependencies": {
+    "@adobe/helix-shared-process-queue": "^3.1.1"
   }
 }
