--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "*.(js|cjs|mjs)": "eslint"
   },
   "dependencies": {
-    "@adobe/helix-shared-process-queue": "^3.1.1"
+    "@adobe/helix-shared-process-queue": "^3.1.1",
+    "@dylandepass/helix-product-shared": "1.0.1"
   }
 }
