feat: push invalidation support

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,22 +1,30 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "NodeNext",   
-    "moduleResolution": "NodeNext",
+    "target": "ES2021", 
+    "moduleResolution": "node",
     "checkJs": true,
     "allowJs": true,
+    "maxNodeModuleJsDepth": 2,
     "baseUrl": ".",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./node_modules/@adobe/helix-admin-support/types"
+    ],
     "paths": {
       "*": ["types/*"],         
-      "@cloudflare/workers-types/*": ["node_modules/@cloudflare/workers-types/*"]
+      "@cloudflare/workers-types/*": ["node_modules/@cloudflare/workers-types/*"],
+      "@adobe/helix-admin-support": ["node_modules/@adobe/helix-admin-support/src/index.d.ts"]
     }
   },
   "include": [
     "./**/*.js",
-    "./src/types.d.ts" 
+    "./src/types.d.ts",
+    "./node_modules/@adobe/helix-admin-support/src/index.d.ts",
+    "./node_modules/@adobe/helix-admin-support/types/*.d.ts"
   ],
   "exclude": [
-    "node_modules",
+    "node_modules/@adobe/helix-admin-support/src/index.js",
+    "node_modules/@adobe/helix-admin-support/test",
     "dist"
   ]
 }
