--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "*.(js|cjs|mjs)": "eslint"
   },
   "dependencies": {
-    "@adobe/helix-shared-process-queue": "^3.1.1",
-    "@dylandepass/helix-product-shared": "1.2.2"
+    "@adobe/helix-admin-support": "3.3.21",
+    "@adobe/helix-shared-process-queue": "3.1.1",
+    "@dylandepass/helix-product-shared": "1.2.4"
   }
 }
