fix: use new helix-product-bus for all environments

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,8 +13,8 @@ kv_namespaces = [
 
 [[r2_buckets]]
 binding = "CATALOG_BUCKET"
-preview_bucket_name = "adobe-commerce-catalog"
-bucket_name = "adobe-commerce-catalog-dev"
+preview_bucket_name = "helix-product-bus"
+bucket_name = "helix-product-bus"
 remote = true
 
 [[r2_buckets]]
@@ -51,8 +51,8 @@ kv_namespaces = [
 
 [[env.ci.r2_buckets]]
 binding = "CATALOG_BUCKET"
-preview_bucket_name = "adobe-commerce-catalog-dev"
-bucket_name = "adobe-commerce-catalog-dev"
+preview_bucket_name = "helix-product-bus"
+bucket_name = "helix-product-bus"
 
 [[env.ci.r2_buckets]]
 binding = "ORDERS_BUCKET"
@@ -87,8 +87,8 @@ kv_namespaces = [
 
 [[env.next.r2_buckets]]
 binding = "CATALOG_BUCKET"
-preview_bucket_name = "adobe-commerce-catalog"
-bucket_name = "adobe-commerce-catalog"
+preview_bucket_name = "helix-product-bus"
+bucket_name = "helix-product-bus"
 
 [[env.next.r2_buckets]]
 binding = "ORDERS_BUCKET"
@@ -123,8 +123,8 @@ kv_namespaces = [
 
 [[env.production.r2_buckets]]
 binding = "CATALOG_BUCKET"
-preview_bucket_name = "adobe-commerce-catalog-dev"
-bucket_name = "adobe-commerce-catalog"
+preview_bucket_name = "helix-product-bus"
+bucket_name = "helix-product-bus"
 
 [[env.production.r2_buckets]]
 binding = "ORDERS_BUCKET"
