--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@adobe/eslint-config-helix": "2.0.9",
     "@adobe/fetch": "4.2.3",
+    "@aws-sdk/client-s3": "3.966.0",
     "@cloudflare/workers-types": "4.20251111.0",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/exec": "7.1.0",
@@ -55,8 +56,10 @@
     "eslint-plugin-import": "2.32.0",
     "esmock": "^2.7.3",
     "husky": "9.1.4",
+    "imap": "^0.8.19",
     "jsdom": "25.0.1",
     "lint-staged": "16.2.6",
+    "mailparser": "^3.9.1",
     "mocha": "11.7.5",
     "mocha-multi-reporters": "1.5.1",
     "nock": "14.0.10",
