chore: update github workflow vars

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,6 +6,13 @@ env:
   CI_BRANCH: ${{ github.ref_name }}
   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
   SUPERUSER_KEY: ${{ secrets.SUPERUSER_KEY }}
+  POSTDEPLOY_SERVICE_TOKEN: ${{ secrets.POSTDEPLOY_SERVICE_TOKEN }}
+  IMAP_APP_PASSWORD: ${{ secrets.IMAP_APP_PASSWORD }}
+  TEST_USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
+  TEST_ADMIN_EMAIL: ${{ secrets.TEST_ADMIN_EMAIL }}
+  CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+  CLOUDFLARE_ACCESS_KEY_ID: ${{ secrets.CLOUDFLARE_ACCESS_KEY_ID }}
+  CLOUDFLARE_SECRET_ACCESS_KEY: ${{ secrets.CLOUDFLARE_SECRET_ACCESS_KEY }}
 
 permissions:
   id-token: write
